feat: add passthrough routes for user status information
